8201509: Zero: S390 31bit atomic_copy64 inline assembler is wrong

The inline assembler for the S390 (S390 and not _LP64) has src and dst reversed thereby corrupting data

Reviewed-by: shade